suil (0.10.0) stable;

  * Add support for X11 in Gtk3
  * Add support for Qt5 in Gtk2
  * Add suil_init() to support early initialization and passing any necessary
    information that may be needed in the future (thanks Stefan Westerfeld)
  * Fix minor memory errors
  * Fix building with X11 against custom LV2 install path (thanks Robin Gareus)

 -- David Robillard <d@drobilla.net>  Tue, 03 Oct 2017 22:11:49 +0200

suil (0.8.4) stable;

  * Configure based on compiler target OS for cross-compilation
  * Add Cocoa in Gtk wrapper (patch from Robin Gareus)
  * Various Windows fixes (patches from Robin Gareus)
  * Center X11 UIs in Gtk (patch from Robin Gareus)
  * Fix initial size of resizable X11 UIs in Gtk (patch from Robin Gareus)
  * Bubble X11 key events up to Gtk parent (patch from Filipe Coelho)
  * Add Gtk2 and X11 in Qt5 wrappers (patch from Rui Nuno Capela)
  * Fix compilation with -Wl,--no-undefined
  * Fix a few minor/unlikely memory errors
  * Gracefully handle failure to open wrapper
  * Only report suil_ui_supported() if necessary wrapper is compiled in
  * Upgrade to waf 1.8.14

 -- David Robillard <d@drobilla.net>  Mon, 19 Sep 2016 22:47:44 -0400

suil (0.8.2) stable;

  * Fix embedding several Qt UIs in Gtk
  * Add configure options to disable all Gtk or Qt support
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 18:18:00 -0400

suil (0.8.0) stable;

  * Add suil_instance_get_handle (patch from Rui Nuno Capela)
  * Fix compilation errors on some systems
  * Upgrade to waf 1.7.14

 -- David Robillard <d@drobilla.net>  Sat, 04 Jan 2014 16:06:56 -0500

suil (0.6.16) stable;

  * Fix suil_instance_extension_data() for UIs with NULL extension_data
  * Fix crashes and resizing for X11 in Qt (patch from Rui Nuno Capela)

 -- David Robillard <d@drobilla.net>  Mon, 16 Sep 2013 23:48:57 -0400

suil (0.6.14) stable;

  * Print system error message if module fails to load
  * Lower dependency from Gtk 2.24 introduced in 0.6.12